Primer renderizado app component html
Primer renderizado ok del maquetado inicial. Cambios en tabla y celdas. Corrección de error *ngFor en tag 'td'.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
 Tabla:
 <table>
-    <tr *ngFor="let fila of tabla.celdas"></tr>
+    <tr *ngFor="let fila of tabla.celdas; index as y">
+        <td *ngFor="let columna of fila; index as x">
+            <div>
+                ({{y}})
+            </div>
+        </td>
+    </tr>
 </table>
