--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -5,6 +5,38 @@ td {
 }
 
 td {
-    width: 32px;
-    height: 32px;
+    width: 50px;
+    height: 50px;
+    background-color: #c9fad4;
+    color: #3d3c3c;
+}
+
+.container {
+    width: 100%;
+    height: 100%;
+}
+
+.buscaminas-container {
+    margin-top: 10px;
+}
+
+.buscaminas-table-container {
+    height: 650px;
+}
+
+.h1-buscaminas {
+    margin-top: 10px;
+    margin-left: 15px;
+    margin-bottom: 3px;
+}
+
+.button-mina {
+    color: #f10a0a;
+    /* margin-top: 10px;
+    margin-bottom: 5px;
+    margin-left: 10px; */
+}
+
+.mat-icon-bandera {
+    color: blue;
 }
