--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,53 @@
-Tabla:
-<table>
-    <tr *ngFor="let fila of tabla.celdas; index as y">
-        <td *ngFor="let celda of fila; index as x" (click)="verificarCelda(celda)" (contextmenu)="$event.preventDefault(); bandera(celda)">
-            <!-- <div>
-                ({{y}},{{x}})
-            </div> -->
-            <!-- <div>Estado: {{celda.estado}}</div> -->
-            <div *ngIf="celda.estado === 'limpio' && !celda.mina">{{celda.minasProximidad}}</div>
-            <div *ngIf="celda.estado === 'bandera'">
-                <!-- {{celda.estado}} -->
-                <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M7,2H9V22H7V2M19,9L11,14.6V3.4L19,9Z" />
-                </svg> -->
-                <mat-icon>tour</mat-icon>
-            </div>
-            <div *ngIf="celda.mina && celda.estado === 'limpio'">
-                <!-- {{celda.estado}} -->
-                <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                    <path fill="currentColor" d="M23,13V11H19.93C19.75,9.58 19.19,8.23 18.31,7.1L20.5,4.93L19.07,3.5L16.9,5.69C15.77,4.81 14.42,4.25 13,4.07V1H11V4.07C9.58,4.25 8.23,4.81 7.1,5.69L4.93,3.5L3.5,4.93L5.69,7.1C4.81,8.23 4.25,9.58 4.07,11H1V13H4.07C4.25,14.42 4.81,15.77 5.69,16.9L3.5,19.07L4.93,20.5L7.1,18.31C8.23,19.19 9.58,19.75 11,19.93V23H13V19.93C14.42,19.75 15.77,19.19 16.9,18.31L19.07,20.5L20.5,19.07L18.31,16.9C19.19,15.77 19.75,14.42 19.93,13H23M12,8A4,4 0 0,0 8,12H6A6,6 0 0,1 12,6V8Z" />
-                </svg> -->
-                <mat-icon>wb_sunny</mat-icon>
-            </div>
-            <!-- <div>Proximidad: {{celda.minasProximidad}}</div> -->
-        </td>
-    </tr>
-</table>
+<div class="container">
 
-<button mat-raised-button class="button-add" (click)="reiniciar()">
-    <mat-icon>restart_alt</mat-icon>
-</button>
+    <div class="buscaminas-container">
+
+        <div class="buscaminas-table-container">
+
+            <mat-card>
+                <mat-card-title>
+                    <h2 class="h2-comercios">Buscaminas</h2>
+                </mat-card-title>
+                <mat-card-subtitle>Sanatorio Allende - frontend - tec</mat-card-subtitle>
+
+                <mat-card-content align="center">
+                    <table>
+                        <tr *ngFor="let fila of tabla.celdas; index as y">
+                            <td *ngFor="let celda of fila; index as x" (click)="verificarCelda(celda)" (contextmenu)="$event.preventDefault(); bandera(celda)">
+                                <!-- <div>
+                            ({{y}},{{x}})
+                        </div> -->
+                                <!-- <div>Estado: {{celda.estado}}</div> -->
+                                <div *ngIf="celda.estado === 'limpio' && !celda.mina">{{celda.minasProximidad}}</div>
+                                <div *ngIf="celda.estado === 'bandera'">
+                                    <!-- {{celda.estado}} -->
+                                    <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M7,2H9V22H7V2M19,9L11,14.6V3.4L19,9Z" />
+                            </svg> -->
+
+                                    <mat-icon class="mat-icon-bandera">tour</mat-icon>
+                                </div>
+                                <div *ngIf="celda.mina && celda.estado === 'limpio'">
+                                    <!-- {{celda.estado}} -->
+                                    <!-- <svg style="width:24px;height:24px" viewBox="0 0 24 24">
+                                <path fill="currentColor" d="M23,13V11H19.93C19.75,9.58 19.19,8.23 18.31,7.1L20.5,4.93L19.07,3.5L16.9,5.69C15.77,4.81 14.42,4.25 13,4.07V1H11V4.07C9.58,4.25 8.23,4.81 7.1,5.69L4.93,3.5L3.5,4.93L5.69,7.1C4.81,8.23 4.25,9.58 4.07,11H1V13H4.07C4.25,14.42 4.81,15.77 5.69,16.9L3.5,19.07L4.93,20.5L7.1,18.31C8.23,19.19 9.58,19.75 11,19.93V23H13V19.93C14.42,19.75 15.77,19.19 16.9,18.31L19.07,20.5L20.5,19.07L18.31,16.9C19.19,15.77 19.75,14.42 19.93,13H23M12,8A4,4 0 0,0 8,12H6A6,6 0 0,1 12,6V8Z" />
+                            </svg> -->
+
+                                    <button mat-icon-button class="button-mina">
+                                        <mat-icon>wb_sunny</mat-icon>
+                                      </button>
+                                </div>
+                                <!-- <div>Proximidad: {{celda.minasProximidad}}</div> -->
+                            </td>
+                        </tr>
+                    </table>
+                </mat-card-content>
+
+                <mat-card-actions>
+                    <button mat-button (click)="reiniciar()"><mat-icon>restart_alt</mat-icon></button>
+                </mat-card-actions>
+            </mat-card>
+        </div>
+    </div>
+
+</div>
